update kick for LAMP

--- a/kickstart/co32-vm-lamp.cfg
+++ b/kickstart/co32-vm-lamp.cfg
@@ -28,4 +28,32 @@ repo --name="centos"  --baseurl=http://mirror.centos.org/centos/6.0/os/i386/ --c
 
 %packages --nobase
 @core
+
+# -- added by hand --
+vim-enhanced
+openssh-clients
+openssh-server
+httpd
+mysql
+mysql-server
+ntp
+ntpdate
+man
+telnet
+
+php
+php-cli
+php-common
+php-pdo
+php-gd
+php-intl
+php-mbstring
+php-mysql
+php-pgsql
+php-xml
+php-zts
+
+
+# -- end by hand --
+
 %end
