--- a/vokrug/ser/etc/opensips.cfg
+++ b/vokrug/ser/etc/opensips.cfg
@@ -123,11 +123,11 @@ modparam("registrar", "max_expires", 600)
 
 
 # ----- usrloc params -----
-modparam("usrloc", "db_mode",   0)
+#modparam("usrloc", "db_mode",   0)
 /* uncomment the following lines if you want to enable DB persistency
    for location entries */
-#modparam("usrloc", "db_mode",   2)
-#modparam("usrloc", "db_url", "mysql://opensips:pass4sips@localhost/opensips")
+modparam("usrloc", "db_mode",   2)
+modparam("usrloc", "db_url", "mysql://opensips:pass4sips@localhost/opensips")
 
 
 # ----- uri params -----
@@ -244,7 +244,7 @@ route {
 		sl_send_reply("404", "Not Found");
 		exit;
 	    };
-	    append_hf("P-hint: usrloc applied\r\n");
+	    #append_hf("P-hint: usrloc applied\r\n");
 	}
 
 	route(1);
@@ -252,8 +252,16 @@ route {
 
 route[1] {
     xlog("L_INFO", "-- route Block enter --");
+    t_on_reply("1");
+    t_on_failure("1");
     if (!t_relay()) {
 	sl_reply_error();
     };
     exit;
+}
+onreply_route[1] {
+    append_hf("P-hint: onreply_route[1]\r\n");
+}
+failure_route[1] {
+    append_hf("P-hint: failure_route[1]\r\n");
 }
