--- a/ser/etc/opensips.cfg
+++ b/ser/etc/opensips.cfg
@@ -75,7 +75,7 @@ loadmodule "registrar.so"
 loadmodule "textops.so"
 loadmodule "mi_fifo.so"
 loadmodule "uri.so"
-loadmodule "xlog.so"
+#loadmodule "xlog.so"
 #loadmodule "acc.so"
 /* uncomment next lines for MySQL based authentication support 
    NOTE: a DB (like db_mysql) module must be also loaded */
@@ -97,7 +97,7 @@ loadmodule "domain.so"
 # -- include Perl support --
 loadmodule "perl.so"
 modparam("perl", "filename", "/usr/local/etc/opensips/perlfunctions.pl")
-modparam("perl", "modpath", "/usr/local/lib/opensips/perl") 
+modparam("perl", "modpath", "/usr/local/lib64/opensips/perl") 
 loadmodule "avpops.so"
 
 # ----------------- setting module-specific parameters ---------------
@@ -109,7 +109,7 @@ modparam("mi_fifo", "fifo_name", "/tmp/opensips_fifo")
 
 # ----- rr params -----
 # add value to ;lr param to cope with most of the UAs
-modparam("rr", "enable_full_lr", 1)
+#modparam("rr", "enable_full_lr", 1)
 # do not append from tag to the RR (no need for this script)
 modparam("rr", "append_fromtag", 0)
 
@@ -229,7 +229,7 @@ route {
 	    if (method=="REGISTER") {
 		perl_exec("authorize");
 
-		if(avp_check("$avp(s:auth)","eq/defined/g")) {
+		if(avp_check("$avp(auth)","eq/defined/g")) {
 		    xlog("L_INFO", "-- REGISTER:: save location --");
 		    save("location");
 		} else {
