--- a/ser/etc/opensips.cfg
+++ b/ser/etc/opensips.cfg
@@ -1,4 +1,3 @@
-
 ####### Global Parameters #########
 
 debug=3
@@ -38,14 +37,20 @@ modparam("usrloc", "nat_bflag", 6)
 
 loadmodule "registrar.so"
 modparam("registrar", "max_contacts", 10)
-modparam("registrar", "default_expires", 120)
+modparam("registrar", "default_expires", 320)
 modparam("registrar", "min_expires", 120)
-modparam("registrar", "max_expires", 120)
+modparam("registrar", "max_expires", 920)
 modparam("registrar", "received_avp", "$avp(rcv)")
 #modparam("registrar", "nat_flag", 6)
 
 loadmodule "textops.so"
 loadmodule "mi_fifo.so"
+
+# Управляющий интерфейс OpenSIPS
+loadmodule "mi_datagram.so"
+modparam("mi_datagram", "socket_name", "/var/run/opensips.sock")
+modparam("mi_datagram", "children_count", 10)
+modparam("mi_datagram", "unix_socket_mode", 0666)
 
 loadmodule "uri.so"
 modparam("uri", "use_uri_table", 0)
@@ -61,6 +66,8 @@ loadmodule "domain.so"
 modparam("domain", "db_url", "mysql://opensips:pass4sips@localhost/opensips")
 modparam("domain", "db_mode", 1)   # Use caching
 
+loadmodule "dialog.so"
+
 # -- include Perl support --
 loadmodule "perl.so"
 modparam("perl", "filename", "/usr/local/etc/opensips/perlfunctions.pl")
@@ -74,84 +81,209 @@ loadmodule "nathelper.so"
 modparam("nathelper", "natping_interval", 0)
 modparam("nathelper", "received_avp", "$avp(rcv)")
 
+loadmodule "nat_traversal.so"
+
 loadmodule "mediaproxy.so"
 modparam("mediaproxy","mediaproxy_socket", "/var/run/mediaproxy.sock")
 
 ####### Routing Logic ########
+
+# Сюда попадает входящий пакет
 route {
-	if (!mf_process_maxfwd_header("10")) {
+
+    	if (!mf_process_maxfwd_header("10")) {
 	    sl_send_reply("483","Too Many Hops");
 	    exit;
 	}
-
+	
 	if (msg:len >= 2048 ) {
-	    sl_send_reply("513", "Message Too Large");
+	    sl_send_reply("513", "Message too big");
 	    exit;
 	}
 
-	if (method!="REGISTER") {
-	    if (nat_uac_test("19")) {
+	# Добавляем флаг nat
+	if (!is_method("REGISTER|MESSAGE")) {
+	    if (nat_uac_test("3")) {
 		record_route(";nat=yes");
 	    } else {
 		record_route();
 	    }
 	}
 
-	if (loose_route()) {
-	    append_hf("P-hint: rr-enforced\r\n");
-	    route(1);
+	# Обрабатываем запросы активного звонка
+	if (has_totag()) {
+	    if (loose_route()) {
+		if (method=="BYE" || method=="CANCEL") {
+		    end_media_session();
+		} else {
+		    # Вносим изменения в заголовок для NAT
+		    if ((nat_uac_test("1") || check_route_param("nat=yes"))) {
+			fix_nated_contact();
+			force_rport();
+			use_media_proxy();
+			setflag(11); # флаг, что удалённая сторона за NAT
+		    }
+		}
+		route(RELAY);
+		exit;
+	    } else {
+		# Обработка для ACK пакетов
+		if (is_method("ACK")) {
+		    if (t_check_trans()) {
+			if ((nat_uac_test("1") || check_route_param("nat=yes"))) {
+			    fix_nated_contact();
+			    force_rport();
+			    use_media_proxy();
+			    setflag(11); # флаг, что удалённая сторона за NAT
+			}
+			route(RELAY);
+			exit;
+		    }
+		}
+	    }
 	}
 
-	if (!is_uri_host_local()) {
-	    if (method=="REGISTER") {
-		sl_send_reply("404", "Domain Not Found");
-	    } else {
-		sl_send_reply("403", "Forbidden");
+	# CANCEL && BYE от оригинатора
+	if (is_method("CANCEL|BYE")) {
+	    if (t_check_trans()) {
+		end_media_session();
+		route(RELAY);
 	    }
 	    exit;
-	} else {
-	    if (method=="REGISTER") {
-		sl_send_reply("100", "Trying");
+	}
 
-		perl_exec("authorize");
-		if(avp_check("$avp(auth)","eq/ok/g")) {
-		    xlog("L_INFO", "-- REGISTER:: save location --");
+	# Включаем keepalive для клиента за NAT
+	if (method=="INVITE" && !has_totag() && nat_uac_test("1")) {
+	    nat_keepalive();
+	}
+
+	# Разбираем запросы
+	if (is_method("REGISTER")) {
+	    route(ROUTE_REGISTER);
+	} else {
+	    if (is_method("INVITE")) {
+		route(ROUTE_INVITE);
+	    } else {
+		# Другие типы запросов не поддерживаем
+		sl_send_reply("405", "Method $rm is not allowed");
+	    }
+	}
+}
+
+# Пересылка запроса
+route[RELAY] {
+    t_on_failure("FAILURE_ROUTE_1");
+    t_on_reply("ONREPLY_ROUTE_1");
+    if (!t_relay()) {
+	sl_reply_error();
+    }
+    exit;
+}
+
+# Обработка регистрации
+route[ROUTE_REGISTER] {
+    
+    if (is_uri_host_local()) {
+	sl_send_reply("100", "Trying");
+	perl_exec("authorize");
+	if (avp_check("$avp(auth)","eq/ok/g")) {
+	    xlog("L_INFO", "-- REGISTER:: ok -> save_location --");
+	    if (nat_uac_test("7")) {
+		fix_nated_register();
+		force_rport();
+	    }
+	    save("location");
+	} else {
+	    if (avp_check("$avp(auth)","eq/digest/g")) {
+		if(!www_authorize("", "subscriber")) {
+		    xlog("L_INFO", "-- REGISTER:: digest -> www_challenge");
+		    www_challenge("", "0");
+		} else {	    
+		    xlog("L_INFO", "-- REGISTER:: digest -> save_location --");
 		    if (nat_uac_test("7")) {
-			setbflag(6);
 			fix_nated_register();
 			force_rport();
 		    }
 		    save("location");
+		}
+	    } else {
+		if (avp_check("$avp(auth)","eq/undefined/g")) {
+		    xlog("L_INFO", "-- REGISTER:: undefined -> www_challenge --");
+		    www_challenge("", "0");
 		} else {
-		    xlog("L_INFO", "-- REGISTER:: reply unauth --");
+		    xlog("L_INFO", "-- REGISTER:: fail -> www_challenge --");
 		    www_challenge("", "0");
 		}
-		exit;
 	    }
-
-            # native SIP destinations are handled using our  USRLOC DB
-	    if (!lookup("location")) {
-		sl_send_reply("404", "Not Found");
-		exit;
-	    };
-	    append_hf("P-hint: usrloc applied\r\n");
 	}
-
-	route(1);
-}
-
-route[1] {
-    xlog("L_INFO", "-- route Block enter --");
-    t_on_reply("1");
-    t_on_failure("1");
-    if (!t_relay()) {
-	sl_reply_error();
-    };
+    } else {
+	sl_send_reply("403", "Forbidden. Domain $od not found");
+    }
+    
     exit;
 }
-onreply_route[1] {
-    append_hf("P-hint: onreply_route[1]\r\n");
+
+route[ROUTE_INVITE] {
+    	# Звонок от нашего пользователя
+    	if (is_from_local()) {
+		
+		# Звонок локальному пользователю
+		if (is_uri_host_local()) {
+		    # Включаем NAT
+		    if (nat_uac_test("3")) {
+			# Если это инициализирующий запрос
+			if (!has_totag()) {
+			    engage_media_proxy(); # инициализирует модуль mediaproxy
+			}
+			force_rport();
+			fix_nated_contact();
+			setflag(10); # флаг, что оригинатор за NAT
+		    }
+		    # Ищем пользователя в location database. 
+		    if (!lookup("location")) {
+			sl_send_reply("404", "User not found");
+			exit;
+		    }
+		    route(RELAY);
+			
+                   # Звонок на внешний домен
+		} else {
+		    route(RELAY);
+		}
+	} else {# Вызов из внешнего домена
+
+	    # Провеяем, что вызывается локальный пользователь
+	    if (is_uri_host_local()) {
+		if (!lookup("location")) {
+		    sl_send_reply("404", "User not found");
+		    exit;
+		}
+		route(RELAY);
+	    } else {
+		sl_send_reply("403", "Forbidden");
+	    }
+	}
+} 
+
+# ONREPLY_ROUTE: вызывается при сообщении от терминатора
+onreply_route[ONREPLY_ROUTE_1] {
+    if ((isflagset(10) || isflagset(11)) && (status=~"(180)|(183)|2[0-9][0-9]")) {
+	if (!search("^Content-Type:[ ]*application/sdp*")) {
+	    use_media_proxy();
+	}
+    }
+    
+    if (nat_uac_test("1")) {
+	fix_nated_contact();
+    }
 }
-failure_route[1] {
-    append_hf("P-hint: failure_route[1]\r\n");
+
+# FAILURE_ROUTE:  вызывается если случился сбой вызова
+failure_route[FAILURE_ROUTE_1] {
+    append_branch();
+    if (!t_relay()) {
+	exit;
+    }
 }
+
+
