--- a/ast/etc/sip.conf
+++ b/ast/etc/sip.conf
@@ -6,14 +6,14 @@ allowguest=yes                  ; Allow or reject guest calls (default is yes)
 				; and you have allowguest=yes
 				; you want to check which services you offer everyone
 				; out there, by enabling them in the default context (see below).
-;match_auth_username=yes        ; if available, match user entry using the
+match_auth_username=yes        ; if available, match user entry using the
                                 ; 'username' field from the authentication line
                                 ; instead of the From: field.
 ;allowoverlap=no                 ; Disable overlap dialing support. (Default is yes)
 ;allowtransfer=no               ; Disable all transfers (unless enabled in peers or users)
                                 ; Default is enabled. The Dial() options 't' and 'T' are not
                                 ; related as to whether SIP transfers are allowed or not.
-;realm=mydomain.tld             ; Realm for digest authentication
+realm=v.uiptel.com             ; Realm for digest authentication
                                 ; defaults to "asterisk". If you set a system name in
                                 ; asterisk.conf, it defaults to that system name
                                 ; Realms MUST be globally unique according to RFC 3261
@@ -459,7 +459,7 @@ alwaysauthreject = yes         ; When an incoming INVITE or REGISTER is to be re
 ;
 ; Examples:
 ;
-;register => 1234:password@mysipprovider.com
+register => ast:pass4ast@v.uiptel.com/ast
 ;
 ;     This will pass incoming calls to the 's' extension
 ;
@@ -739,10 +739,12 @@ ignoreregexpire=yes            ; Enabling this setting has two functions:
 ; To disallow requests for domains not serviced by this server:
 ; allowexternaldomains=no
 
+domain=btom.uiptel.com
 domain=v.uiptel.com
+domain=172.18.66.176
 allowexternaldomains=yes
-autodomain=no
-fromdomain=v.uiptel.com
+autodomain=yes
+;fromdomain=v.uiptel.com
                                 
 
 
@@ -774,6 +776,6 @@ host=dynamic
 type=friend
 host=dynamic
 
-[bar]
+[edik]
 type=friend
 host=dynamic
