--- a/ser/etc/opensips.cfg
+++ b/ser/etc/opensips.cfg
@@ -36,9 +36,9 @@ modparam("usrloc", "db_url", "mysql://opensips:pass4sips@localhost/opensips")
 modparam("usrloc", "nat_bflag", 6)
 
 loadmodule "registrar.so"
-modparam("registrar", "max_contacts", 10)
+modparam("registrar", "max_contacts", 5)
 modparam("registrar", "default_expires", 320)
-modparam("registrar", "min_expires", 120)
+modparam("registrar", "min_expires", 720)
 modparam("registrar", "max_expires", 920)
 modparam("registrar", "received_avp", "$avp(rcv)")
 #modparam("registrar", "nat_flag", 6)
@@ -103,7 +103,7 @@ route {
 
 	# Добавляем флаг nat
 	if (!is_method("REGISTER|MESSAGE")) {
-	    if (nat_uac_test("3")) {
+	    if (nat_uac_test("11")) {
 		record_route(";nat=yes");
 	    } else {
 		record_route();
@@ -146,14 +146,17 @@ route {
 	# CANCEL && BYE от оригинатора
 	if (is_method("CANCEL|BYE")) {
 	    if (t_check_trans()) {
+		xlog("L_INFO", "CANCEL|BYE notag -> end_media_session,route(RELAY),exit");
 		end_media_session();
-		route(RELAY);
+	    } else {
+		xlog("L_INFO", "CANCEL|BYE notag -> route(RELAY),exit");
 	    }
+	    route(RELAY);
 	    exit;
 	}
 
 	# Включаем keepalive для клиента за NAT
-	if (method=="INVITE" && !has_totag() && nat_uac_test("1")) {
+	if (method=="INVITE" && !has_totag() && nat_uac_test("11")) {
 	    nat_keepalive();
 	}
 
@@ -187,31 +190,35 @@ route[ROUTE_REGISTER] {
 	sl_send_reply("100", "Trying");
 	perl_exec("authorize");
 	if (avp_check("$avp(auth)","eq/ok/g")) {
-	    xlog("L_INFO", "-- REGISTER:: ok -> save_location --");
 	    if (nat_uac_test("7")) {
+		xlog("L_INFO", "-- ok[nat] -> save_location");
 		fix_nated_register();
 		force_rport();
+	    } else {
+		xlog("L_INFO", "-- ok -> save_location");
 	    }
 	    save("location");
 	} else {
 	    if (avp_check("$avp(auth)","eq/digest/g")) {
 		if(!www_authorize("", "subscriber")) {
-		    xlog("L_INFO", "-- REGISTER:: digest -> www_challenge");
+		    xlog("L_INFO", "-- digest -> www_challenge");
 		    www_challenge("", "0");
 		} else {	    
-		    xlog("L_INFO", "-- REGISTER:: digest -> save_location --");
 		    if (nat_uac_test("7")) {
+			xlog("L_INFO", "-- digest[nat] -> save_location");
 			fix_nated_register();
 			force_rport();
+		    } else {
+			xlog("L_INFO", "-- digest -> save_location");
 		    }
 		    save("location");
 		}
 	    } else {
 		if (avp_check("$avp(auth)","eq/undefined/g")) {
-		    xlog("L_INFO", "-- REGISTER:: undefined -> www_challenge --");
+		    xlog("L_INFO", "-- undefined -> www_challenge");
 		    www_challenge("", "0");
 		} else {
-		    xlog("L_INFO", "-- REGISTER:: fail -> www_challenge --");
+		    xlog("L_INFO", "-- fail -> www_challenge --");
 		    www_challenge("", "0");
 		}
 	    }
@@ -230,7 +237,7 @@ route[ROUTE_INVITE] {
 		# Звонок локальному пользователю
 		if (is_uri_host_local()) {
 		    # Включаем NAT
-		    if (nat_uac_test("3")) {
+		    if (nat_uac_test("11")) {
 			# Если это инициализирующий запрос
 			if (!has_totag()) {
 			    engage_media_proxy(); # инициализирует модуль mediaproxy
@@ -246,24 +253,16 @@ route[ROUTE_INVITE] {
 		    }
 		    route(RELAY);
 			
-                   # Звонок на внешний домен
+                # Звонок на внешний домен
 		} else {
-		    route(RELAY);
+		    sl_send_reply("403", "Forbidden");
 		}
-	} else {# Вызов из внешнего домена
-
-	    # Провеяем, что вызывается локальный пользователь
-	    if (is_uri_host_local()) {
-		if (!lookup("location")) {
-		    sl_send_reply("404", "User not found");
-		    exit;
-		}
-		route(RELAY);
-	    } else {
-		sl_send_reply("403", "Forbidden");
-	    }
+	} else {
+            # Вызов из внешнего домена
+	    sl_send_reply("403", "Forbidden");
 	}
-} 
+}#route[ROUTE_INVITE] 
+
 
 # ONREPLY_ROUTE: вызывается при сообщении от терминатора
 onreply_route[ONREPLY_ROUTE_1] {
@@ -285,5 +284,3 @@ failure_route[FAILURE_ROUTE_1] {
 	exit;
     }
 }
-
-
