modify lamp kick

--- a/kickstart/co60-vm-lamp.cfg
+++ b/kickstart/co60-vm-lamp.cfg
@@ -2,7 +2,8 @@
 
 #version=RHEL6
 install
-url --url=http://mirror.centos.org/centos/6.0/os/i386/
+#url --url=http://mirror.centos.org/centos/6.0/os/i386/
+url --url=http://192.168.0.1/centos-iso
 lang en_US.UTF-8
 keyboard us
 network --device eth0 --bootproto dhcp
@@ -10,8 +11,8 @@ rootpw  --iscrypted $6$Uf1MHAKvtSZawMbg$CDL3zbIY5sxGf8SrGeTkgjVLE.yYzmmkvgt906co
 firewall --service=ssh
 authconfig --enableshadow --passalgo=sha512 --enablefingerprint
 selinux --enforcing
-timezone Europe/Kiev
-bootloader --location=mbr --driveorder=sda --append="crashkernel=auto rhgb quiet"
+timezone Etc/UTC
+#bootloader --location=mbr --driveorder=sda --append="crashkernel=auto rhgb quiet"
 # The following is the partition information you requested
 # Note that any partitions you deleted are not expressed
 # here so unless you clear all partitions first, this is
@@ -24,7 +25,7 @@ bootloader --location=mbr --driveorder=sda --append="crashkernel=auto rhgb quiet
 #part /boot --fstype=ext4 --size=500
 #part pv.iyFYrF-dmUF-vlDl-F4rw-bbQG-O5jG-UdnBt4 --grow --size=1
 
-repo --name="centos"  --baseurl=http://mirror.centos.org/centos/6.0/os/i386/ --cost=100
+#repo --name="centos"  --baseurl=http://mirror.centos.org/centos/6.0/os/i386/ --cost=100
 
 %packages --nobase
 @core
@@ -36,8 +37,8 @@ openssh-server
 httpd
 mysql
 mysql-server
-ntp
-ntpdate
+#ntp
+#ntpdate
 man
 telnet
 
