max usrloc entry set to 3

--- a/ser/etc/opensips.cfg
+++ b/ser/etc/opensips.cfg
@@ -36,7 +36,7 @@ modparam("usrloc", "db_url", "mysql://opensips:pass4sips@localhost/opensips")
 modparam("usrloc", "nat_bflag", 6)
 
 loadmodule "registrar.so"
-modparam("registrar", "max_contacts", 5)
+modparam("registrar", "max_contacts", 3)
 modparam("registrar", "default_expires", 320)
 modparam("registrar", "min_expires", 720)
 modparam("registrar", "max_expires", 920)
@@ -46,7 +46,7 @@ modparam("registrar", "received_avp", "$avp(rcv)")
 loadmodule "textops.so"
 loadmodule "mi_fifo.so"
 
-# Управляющий интерфейс OpenSIPS
+# OpenSIPS control interface
 loadmodule "mi_datagram.so"
 modparam("mi_datagram", "socket_name", "/var/run/opensips.sock")
 modparam("mi_datagram", "children_count", 10)
