uiptel.conf modify

--- a/uiptel.com/uiptel.conf
+++ b/uiptel.com/uiptel.conf
@@ -1,11 +1,11 @@
 
 <VirtualHost *:80>
 	ServerName uiptel.com
-	DocumentRoot "/var/www/html/uiptel"
+	DocumentRoot "/var/www/html/uiptel.com"
 	
-	<Directory "/var/www/html/uiptel">
-		SetEnv ROOT_PATH /var/www/html/uiptel
-		SetEnv CLASS_PATH /var/www/html/uiptel/classes
+	<Directory "/var/www/html/uiptel.com">
+		SetEnv ROOT_PATH /var/www/html/uiptel.com
+		SetEnv CLASS_PATH /var/www/html/uiptel.com/classes
 		Options FollowSymLinks
 		AllowOverride All
 		Order allow,deny
