ast etc file added

--- a/ast/etc/res_ldap.conf
+++ b/ast/etc/res_ldap.conf
@@ -2,30 +2,13 @@
 ; Configuration file for res_config_ldap
 ;
 
-; Realtime configuration
-; ----------------------
-; In order to use this module, you start 
-; in extconfig.conf with a configuration like this:
-;
-; 	sipusers = ldap,"dc=myDomain,dc=myDomainExt",sip
-; 	sippeers = ldap,"dc=myDomain,dc=myDomainExt",sip
-; 	extensions = ldap,"dc=myDomain,dc=myDomainExt",extensions
-; 	sip.conf = ldap,"dc=myDomain,dc=myDomainExt",config
-;
-; In the case of LDAP the last keyword in each line above specifies
-; a section in this file.
+; Sample Asterisk config file for res_config_ldap
+; in extconfig.conf; you can use it like this:
+; sipusers = ldap,"dc=myDomain,dc=myDomainExt",sip
+; sippeers = ldap,"dc=myDomain,dc=myDomainExt",sip
+; extensions = ldap,"dc=myDomain,dc=myDomainExt",extensions
+; sip.conf = ldap,"dc=myDomain,dc=myDomainExt",config
 
-; TLS support
-; -----------
-; Note that you can configure an ldaps: url here to get TLS support.
-; Detailed configuration of certificates and supported CAs is done in your 
-; ldap.conf file for OpenLDAP clients on your system.
-; This requires that you have OpenLDAP libraries compiled with TLS support
-
-; *********************************************************************************
-; NOTE: res_ldap.conf should be chmod 600 because it contains the plain-text LDAP
-;       password to an account with WRITE access to the asterisk configuration. 
-; *********************************************************************************
 
 [_general]
 ;
@@ -35,8 +18,8 @@
 ;port=389
 ;url=ldap://ldap3.mydomain.com:3890
 ;protocol=3                          ; Version of the LDAP protocol to use; default is 3.
-;basedn=dc=example,dc=tld            ; Base DN
-;user=cn=asterisk,dc=example,dc=tld  ; Bind DN
+;basedn=MyRootDN                     ; Base DN
+;user=MyDN                           ; Bind DN
 ;pass=MyPassword                     ; Bind password
 
 ; Configuration Table
@@ -73,15 +56,7 @@ additionalFilter=(objectClass=AstExtension)
 ; Sip Users Table
 ;
 [sip]
-name = cn       ; We use the "cn" as the default value for name on the line above
-                ; because objectClass=AsteriskSIPUser does not include a uid as an allowed field
-                ; If your entry combines other objectClasses and uid is available, you may
-                ; prefer to change the line to be name = uid, especially if your LDAP entries
-                ; contain spaces in the cn field.
-                ; You may also find it appropriate to use something completely different.
-                ; This is possible by changing the line above to name = AstAccountName (or whatever you
-                ; prefer).
-                ;
+name = cn
 amaflags = AstAccountAMAFlags
 callgroup = AstAccountCallGroup
 callerid = AstAccountCallerID
@@ -95,10 +70,7 @@ fullcontact = gecos
 host = AstAccountHost
 insecure = AstAccountInsecure
 mailbox = AstAccountMailbox
-md5secret = AstAccountRealmedPassword           ; Must be an MD5 hash. Field value can start with
-                                                ; {md5} but it is not required.
-                                                ; Generate the password via the md5sum command, e.g.
-                                                ; echo "my_password" | md5sum
+md5secret = realmedPassword
 nat = AstAccountNAT
 deny = AstAccountDeny
 permit = AstAccountPermit
@@ -133,10 +105,7 @@ fullcontact = AstAccountFullContact
 fullcontact = gecos
 host = AstAccountHost
 mailbox = AstAccountMailbox
-md5secret = AstAccountRealmedPassword           ; Must be an MD5 hash. Field value can start with
-                                                ; {md5} but it is not required.
-                                                ; Generate the password via the md5sum command, e.g.
-                                                ; echo "my_password" | md5sum
+md5secret = realmedPassword
 deny = AstAccountDeny
 permit = AstAccountPermit
 port = AstAccountPort
@@ -172,10 +141,7 @@ fullcontact = gecos
 host = AstAccountHost
 insecure = AstAccountInsecure
 mailbox = AstAccountMailbox
-md5secret = AstAccountRealmedPassword           ; Must be an MD5 hash. Field value can start with
-                                                ; {md5} but it is not required.
-                                                ; Generate the password via the md5sum command, e.g.
-                                                ; echo "my_password" | md5sum
+md5secret = realmedPassword
 nat = AstAccountNAT
 deny = AstAccountDeny
 permit = AstAccountPermit
