--- a/ast/etc/res_pgsql.conf
+++ b/ast/etc/res_pgsql.conf
@@ -9,8 +9,8 @@
 [general]
 dbhost=127.0.0.1
 dbport=5432
-dbname=asterisk
-dbuser=asterisk
+dbname=ats0
+dbuser=ran
 dbpass=password
 ;
 ; dbsock is specified as the directory where the socket file may be found. The
