--- a/ast/etc/features.conf
+++ b/ast/etc/features.conf
@@ -3,42 +3,18 @@
 ;
 
 [general]
-parkext => 700			; What extension to dial to park
+parkext => 700			; What extension to dial to park	(all parking lots)
 parkpos => 701-720		; What extensions to park calls on. (defafult parking lot)
 				; These needs to be numeric, as Asterisk starts from the start position
 				; and increments with one for the next parked call.
 context => parkedcalls		; Which context parked calls are in (default parking lot)
 ;parkinghints = no		; Add hints priorities automatically for parking slots (default is no).
-;parkingtime => 45		; Number of seconds a call can be parked for
+;parkingtime => 45		; Number of seconds a call can be parked for 
 				; (default is 45 seconds)
-
-;comebacktoorigin = yes         ; Setting this option configures the behavior of call parking when the
-                                ; parked call times out (See the parkingtime option).  The default value is 'yes'.
-                                ;
-                                ; 'yes' - When the parked call times out, attempt to send the call back to the peer
-                                ;         that parked this call.  This is done by saving off the name of the channel
-                                ;         that parked the call.
-                                ;
-                                ; 'no'  - This option is useful for performing custom dialplan functionality prior to
-                                ;         sending the call back to the extension that initially parked the call, or to
-                                ;         an entirely different destination.
-                                ;
-                                ;         When the parked call times out, send it back to the dialplan.  The location
-                                ;         will be the 'parkedcallstimeout' context.  The extension will be built from
-                                ;         the saved channel name that parked the call.  For example, if a SIP peer named
-                                ;         '0004F2040001' parked this call, the extension will be 'SIP_0004F2040001'.
-                                ;         (Note that an underscore is used here because the '/' character has a special
-                                ;         meaning in extension names for CallerID matching.)  If this extension does not
-                                ;         exist, the call will be sent to the 's' extension, instead.  Finally, if the 's'
-                                ;         extension of 'parkedcallstimeout' does not exist, the call will fall back to the
-                                ;         's' extension of the 'default' context.
-                                ;
-                                ;         Additionally, in this example an extension of 'SIP_0004F2040001' will be
-                                ;         created in the 'park-dial' context.  This extension will be set up to do a
-                                ;         Dial() to 'SIP/0004F2040001'.
-                                ;
-
-;courtesytone = beep		; Sound file to play to the parked caller
+;comebacktoorigin = yes	; Whether to return to the original calling extension upon parking
+				; timeout or to send the call to context 'parkedcallstimeout' at
+				; extension 's', priority '1' (default is yes).
+;courtesytone = beep		; Sound file to play to the parked caller 
 				; when someone dials a parked call
 				; or the Touch Monitor is activated/deactivated.
 ;parkedplay = caller		; Who to play the courtesy tone to when picking up a parked call
@@ -51,9 +27,8 @@ context => parkedcalls		; Which context parked calls are in (default parking lot
                                 ; one of: callee, caller, both, no (default is no)
 ;parkedcallrecording = caller   ; Enables or disables DTMF based one-touch recording when picking up a parked call.
                                 ; one of: callee, caller, both, no (default is no)
-;parkeddynamic = yes            ; Enables dynamically created parkinglots. (default is no)
 ;adsipark = yes			; if you want ADSI parking announcements
-;findslot => next		; Continue to the 'next' free parking space.
+;findslot => next		; Continue to the 'next' free parking space. 
 				; Defaults to 'first' available
 ;parkedmusicclass=default	; This is the MOH class to use for the parked channel
 				; as long as the class is not set on the channel directly
@@ -66,7 +41,7 @@ context => parkedcalls		; Which context parked calls are in (default parking lot
 ;pickupexten = *8		; Configure the pickup extension. (default is *8)
 ;pickupsound = beep		; to indicate a successful pickup (default: no sound)
 ;pickupfailsound = beeperr	; to indicate that the pickup failed (default: no sound)
-;featuredigittimeout = 1000	; Max time (ms) between digits for
+;featuredigittimeout = 1000	; Max time (ms) between digits for 
                             ; feature activation  (default is 1000 ms)
 ;atxfernoanswertimeout = 15 ; Timeout for answer on attended transfer default is 15 seconds.
 ;atxferdropcall = no        ; If someone does an attended transfer, then hangs up before the transferred
@@ -83,12 +58,8 @@ context => parkedcalls		; Which context parked calls are in (default parking lot
 ; You can set parkinglot with the CHANNEL dialplan function
 ; or by setting 'parkinglot' directly in the channel configuration file.
 ;
-; (Note: Leading '0's and any non-numerical characters on parkpos extensions
-;  will be ignored.  Parkext on the other hand can be any string.)
-;
 ;[parkinglot_edvina]
 ;context => edvinapark
-;parkext => 799
 ;parkpos => 800-850
 ;findslot => next
 
