--- a/ast/etc/modules.conf
+++ b/ast/etc/modules.conf
@@ -21,15 +21,7 @@ autoload=yes
 ; Uncomment the following if you wish to use the Speech Recognition API
 ;preload => res_speech.so
 ;
-; If you want Asterisk to fail if a module does not load, then use
-; the "require" keyword. Asterisk will exit with a status code of 2
-; if a required module does not load.
-;
-; require = chan_sip.so
-; If you want you can combine with preload
-; preload-require = res_odbc.so
-;
-; If you want, load the GTK console right away.
+; If you want, load the GTK console right away.  
 ;
 noload => pbx_gtkconsole.so
 ;load => pbx_gtkconsole.so
@@ -41,9 +33,8 @@ load => res_musiconhold.so
 ;
 noload => chan_alsa.so
 ;noload => chan_oss.so
-noload => chan_console.so
+;noload => chan_console.so
 ;
-
 noload => pbx_ael.so
 noload => res_agi.so
 noload => res_config_ldap.so
