--- a/ast/etc/musiconhold.conf
+++ b/ast/etc/musiconhold.conf
@@ -8,9 +8,9 @@
 
 
 ; valid mode options:
-; files		-- read files from a directory in any Asterisk supported
+; files		-- read files from a directory in any Asterisk supported 
 ;		   media format
-; quietmp3 	-- default
+; quietmp3 	-- default 
 ; mp3 		-- loud
 ; mp3nb		-- unbuffered
 ; quietmp3nb	-- quiet unbuffered
@@ -31,7 +31,7 @@
 ;
 ; The path specified can be either an absolute path (starts with '/'),
 ; or a relative path; relative paths are interpreted as being relative
-; to the 'astdatalibdir' in asterisk.conf, which defaults to
+; to the 'astvarlibdir' in asterisk.conf, which defaults to
 ; /var/lib/asterisk.
 ;
 ; NOTE:
