ast registration on openSIPS

--- a/ast/etc/sip.conf
+++ b/ast/etc/sip.conf
@@ -42,11 +42,17 @@ registertrying=yes
 directmedia=nonat
 localnet=192.168.0.0/255.255.0.0
 qualify=300
-register => atom:pass4atom@v.uiptel.com/atom
-register => echo:pass4echo@v.uiptel.com/echo
-register => time:pass4time@v.uiptel.com/time
+register => 2200@v.uiptel.com:pass42200@sip_proxy/2200
+register => 2101@v.uiptel.com:pass42101@sip_proxy/echo
+register => 2110@v.uiptel.com:pass42110@sip_proxy/time
 
 [authentication]
+
+[sip_proxy]
+type=peer
+host=193.109.166.211
+;host=193.108.39.67
+directmedia=no
 
 [speedflow]
 type=peer
@@ -341,6 +347,7 @@ host=dynamic
 secret=pass4s55
 nat=yes
 directmedia=no
+mailbox=2209@default
 
 [s73-fxs-l1]
 callerid="Max DN office" <2273>
