ast connect to opensips

--- a/ast/etc/extensions.conf
+++ b/ast/etc/extensions.conf
@@ -133,7 +133,7 @@ exten => _1XXX#,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
 exten => _1XXX#,n,dial(IAX2/ast-us/${EXTEN:0:4},20)
 exten => _1XXX#,n,hangup
 
-exten => _24XX,1,Dial(SIP/atom/${EXTEN},30)
+exten => _24XX,1,Dial(SIP/sip_proxy/${EXTEN},30)
 
 exten => 2222,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
 exten => 2222,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
