--- a/ast/etc/sip.conf
+++ b/ast/etc/sip.conf
@@ -50,9 +50,11 @@ register => 2110@v.uiptel.com:pass42110@sip_proxy/time
 
 [sip_proxy]
 type=peer
-host=193.109.166.211
+host=v.uiptel.com
+fromdomain=v.uiptel.com
 ;host=193.108.39.67
 directmedia=no
+qualify=0
 
 [speedflow]
 type=peer
