kickstart/co64-vm-ser.cfg

--- a/kickstart/co64-vm-ser.cfg
+++ b/kickstart/co64-vm-ser.cfg
@@ -13,7 +13,7 @@ firewall --enabled --ssh --http --port=5060:udp,4569:udp
 authconfig --enableshadow --enablemd5
 #selinux --disabled
 selinux --permissive
-services --enabled=ntpdate,ntpd,network --disabled=kudzu,avahi-daemon,haldaemon,xfs,iptables,ip6tables,iscsid,iscsi,portmap,nfslock,bluetooth,rpcidmapd,rpcgssd,pcscd,xfs,anacron,cups
+services --enabled=ntpdate,ntpd,network --disabled=kudzu,avahi-daemon,haldaemon,xfs,ip6tables,iscsid,iscsi,portmap,nfslock,bluetooth,rpcidmapd,rpcgssd,pcscd,xfs,anacron,cups,irqbalance,auditd,netfs
 
 %include /tmp/storage.cfg
 
