enable external location db

--- a/ser/etc/opensips.cfg
+++ b/ser/etc/opensips.cfg
@@ -32,7 +32,7 @@ loadmodule "maxfwd.so"
 
 loadmodule "usrloc.so"
 modparam("usrloc", "db_mode",   2)
-modparam("usrloc", "db_url", "mysql://opensips:pass4sips@localhost/opensips")
+modparam("usrloc", "db_url", "mysql://ser:pass4ser@loc.uiptel.com/opensips")
 modparam("usrloc", "nat_bflag", 6)
 
 loadmodule "registrar.so"
@@ -57,13 +57,13 @@ modparam("uri", "use_uri_table", 0)
 
 loadmodule "auth.so"
 loadmodule "auth_db.so"
-modparam("auth_db", "db_url", "mysql://opensips:pass4sips@localhost/opensips")
+modparam("auth_db", "db_url", "mysql://ser:pass4ser@loc.uiptel.com/opensips")
 
 #loadmodule "alias_db.so"
-#modparam("alias_db","db_url","mysql://opensips:pass4sips@localhost/opensips")
+#modparam("alias_db","db_url","mysql://ser:pass4ser@loc.uiptel.com/opensips")
 
 loadmodule "domain.so"
-modparam("domain", "db_url", "mysql://opensips:pass4sips@localhost/opensips")
+modparam("domain", "db_url", "mysql://ser:pass4ser@loc.uiptel.com/opensips")
 modparam("domain", "db_mode", 1)   # Use caching
 
 loadmodule "dialog.so"
