enable vokrug authorization

--- a/ser/etc/opensips.cfg
+++ b/ser/etc/opensips.cfg
@@ -31,7 +31,7 @@ modparam("rr", "append_fromtag", 0)
 loadmodule "maxfwd.so"
 
 loadmodule "usrloc.so"
-modparam("usrloc", "db_mode",   2)
+modparam("usrloc", "db_mode",   1)
 modparam("usrloc", "db_url", "mysql://ser:pass4ser@loc.uiptel.com/opensips")
 modparam("usrloc", "nat_bflag", 6)
 
@@ -189,13 +189,13 @@ route[ROUTE_REGISTER] {
     if (is_uri_host_local()) {
 	sl_send_reply("100", "Trying");
 	perl_exec("authorize");
-	if (avp_check("$avp(auth)","eq/ok/g")) {
+	if (avp_check("$avp(auth)","eq/vokrug/g")) {
 	    if (nat_uac_test("7")) {
-		xlog("L_INFO", "-- ok[nat] -> save_location");
+		xlog("L_INFO", "-- vokrug[nat] -> save_location");
 		fix_nated_register();
 		force_rport();
 	    } else {
-		xlog("L_INFO", "-- ok -> save_location");
+		xlog("L_INFO", "-- vokrug -> save_location");
 	    }
 	    save("location");
 	} else {
@@ -224,7 +224,7 @@ route[ROUTE_REGISTER] {
 	    }
 	}
     } else {
-	sl_send_reply("403", "Forbidden. Domain $od not found");
+	sl_send_reply("403", "Forbidden. Unknown domain $od");
     }
     
     exit;
