--- a/ser/etc/opensips.cfg
+++ b/ser/etc/opensips.cfg
@@ -214,13 +214,8 @@ route[ROUTE_REGISTER] {
 		    save("location");
 		}
 	    } else {
-		if (avp_check("$avp(auth)","eq/undefined/g")) {
-		    xlog("L_INFO", "-- undefined -> www_challenge");
-		    www_challenge("", "0");
-		} else {
-		    xlog("L_INFO", "-- fail -> www_challenge --");
-		    www_challenge("", "0");
-		}
+		xlog("L_INFO", "-- $avp(auth) -> www_challenge");
+		www_challenge("", "0");
 	    }
 	}
     } else {
