asterisk: configure change

--- a/ast/etc/extensions.conf
+++ b/ast/etc/extensions.conf
@@ -77,13 +77,17 @@ exten => _NXXXXXXXXXXX#,1,Dial(SIP/speedflow/${EXTEN:0:12},60)
 exten => _NXXXXXXXXXXXX,1,Dial(SIP/speedflow/${EXTEN:0:13},60)    
 exten => _NXXXXXXXXXXXX#,1,Dial(SIP/speedflow/${EXTEN:0:13},60)    
 
-exten => 79036106748,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
-exten => 79036106748,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
-exten => 79036106748,n,Dial(SIP/speedflow/${EXTEN:0:11},60)
+;exten => 79036106748,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
+;exten => 79036106748,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
+;exten => 79036106748,n,Dial(SIP/speedflow/${EXTEN:0:11},60)
 
-exten => 74951000000,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
-exten => 74951000000,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
-exten => 74951000000,n,Dial(SIP/speedflow/${EXTEN:0:11},60)
+exten => _7XXXXXXXXXX,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
+exten => _7XXXXXXXXXX,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
+exten => _7XXXXXXXXXX,n,Dial(SIP/speedflow/${EXTEN:0:11},60)
+
+exten => _7XXXXXXXXXX#,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
+exten => _7XXXXXXXXXX#,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
+exten => _7XXXXXXXXXX#,n,Dial(SIP/speedflow/${EXTEN:0:11},60)
 
 exten => _1XXXXXXXXXX,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
 exten => _1XXXXXXXXXX,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
@@ -95,27 +99,22 @@ exten => _1XXXXXXXXXX#,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
 exten => _1XXXXXXXXXX#,n,Dial(IAX2/ast-us/${EXTEN:0:11},30)
 exten => _1XXXXXXXXXX#,n,Dial(SIP/speedflow/${EXTEN:0:11},30)
 
-exten => _380XXXXXXXXX,1,Dial(SIP/s67-fxo/${EXTEN:2},60)
+exten => _380XXXXXXXXX,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
+exten => _380XXXXXXXXX,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
+exten => _380XXXXXXXXX,n,Dial(SIP/s67-fxo/${EXTEN:2},60)
 exten => _380XXXXXXXXX,n,Dial(SIP/205/${EXTEN:2},60)
-exten => _380XXXXXXXXX,n,Congestion()
 
-exten => _380XXXXXXXXX#,1,Dial(SIP/s67-fxo/${EXTEN:2:10},60)
+exten => _380XXXXXXXXX#,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
+exten => _380XXXXXXXXX#,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
+exten => _380XXXXXXXXX#,n,Dial(SIP/s67-fxo/${EXTEN:2:10},60)
 exten => _380XXXXXXXXX#,n,Dial(SIP/205/${EXTEN:2:10},60)
-exten => _380XXXXXXXXX#,n,Congestion()
 
-exten => _38062XXXXXXX,1,Dial(SIP/205/${EXTEN:5},60)
-exten => _38062XXXXXXX,n,Dial(SIP/s67-fxo/${EXTEN:5},60)
-exten => _38062XXXXXXX,n,Congestion()
 
-exten =>  _38062XXXXXXX#,1,Dial(SIP/205/${EXTEN:5:7},60)
-exten =>  _38062XXXXXXX#,n,Dial(SIP/s67-fxo/${EXTEN:5:7},60)
-exten =>  _38062XXXXXXX#,n,Congestion()
+exten => _0380XXXXXXXXX,1,Dial(SIP/speedflow/${EXTEN:1:12},30)
+exten => _0380XXXXXXXXX#,1,Dial(SIP/speedflow/${EXTEN:1:12},30)
 
-exten => _0380XXXXXXXXX,1,Set(CALLERID(number)=666)
-exten => _0380XXXXXXXXX,n,Dial(SIP/speedflow/${EXTEN:1:12},30)
-exten => _0380XXXXXXXXX#,1,Set(CALLERID(number)=666)
-exten => _0380XXXXXXXXX#,n,Dial(SIP/speedflow/${EXTEN:1:12},30)
-
+exten => _00380XXXXXXXXX,1,Set(CALLERID(number)=+380508888888)
+exten => _00380XXXXXXXXX,n,Dial(SIP/speedflow/${EXTEN:2:12},30)
 
 [phones]
 include => users
@@ -152,6 +151,9 @@ exten => 2227#,1,Dial(SIP/ran,20)
 
 exten => 2228,1,Dial(SIP/ran_spa,60)
 exten => 2228#,1,Dial(SIP/ran_spa,60)
+
+exten => 2229,1,Dial(SIP/ran_pc,60)
+exten => 2229#,1,Dial(SIP/ran_pc,60)
 
 exten => 2212,1,Dial(SIP/max,60)
 exten => 2212#,1,Dial(SIP/max,60)
@@ -202,11 +204,14 @@ exten => 2215#,n,Dial(SIP/conf_ua,60)
 
 exten => 2209,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
 exten => 2209,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
-exten => 2209,n,Dial(SIP/s55-fxs-l1,60)
+exten => 2209,n,Dial(SIP/s55-fxs-l1,30)
+exten => 2209,n,VoiceMail(2209@default,u)
 exten => 2209#,1,Set(fname=${STRFTIME(${EPOCH},,%Y%m%d%H%M)}-${CALLERID(number)}-${EXTEN})
 exten => 2209#,n,MixMonitor(/var/log/asterisk/calls/${fname}.wav)
-exten => 2209#,n,Dial(SIP/s55-fxs-l1,60)
-    
+exten => 2209#,n,Dial(SIP/s55-fxs-l1,30)
+exten => 2209#,n,VoiceMail(2209@default,u)
+
+
 exten => 2205,1,Dial(SIP/205,60)
 exten => 2205#,1,Dial(SIP/205,60)
 exten => 2207,1,Dial(SIP/207,60)
@@ -231,7 +236,7 @@ exten => 2276#,n,Dial(SIP/s76-fxs-l1,60)
 
 exten => time,1,SayUnixTime(,,dBRA)
 exten => echo,1,Goto(phones,2101,1)
-exten => atom,1,Goto(incoming,s,1)
+exten => s,1,Goto(incoming,s,1)
 exten => 2200,1,Goto(incoming,s,1)
 exten => 2200#,1,Goto(incoming,s,1)
 
@@ -366,6 +371,34 @@ exten => 2321#,1,Dial(SIP/anna_spa,60)
 exten => 2323,1,Dial(SIP/rvv_spa,60)
 exten => 2323#,1,Dial(SIP/rvv_spa,60)
 
+exten => 2333,1,Dial(SIP/jeka,60)
+exten => 2333#,1,Dial(SIP/jeka,60)
+
+exten => 2335,1,Dial(SIP/tver,30)
+exten => 2335#,1,Dial(SIP/tver,30)
+
+exten => 2355,1,Dial(SIP/misha,30)
+exten => 2355,n,VoiceMail(2355@default,u)
+exten => 2355#,1,Dial(SIP/misha,30)
+
+exten => 2356,1,Dial(SIP/un,30)
+exten => 2356,n,VoiceMail(2356@default,u)
+exten => 2356#,1,Dial(SIP/un,30)
+
+exten => 2357,1,Dial(SIP/med,30)
+exten => 2357,n,VoiceMail(2357@default,u)
+exten => 2357#,1,Dial(SIP/med,30)
+
+exten => 2358,1,Dial(SIP/zug,30)
+exten => 2358,n,VoiceMail(2358@default,u)
+exten => 2358#,1,Dial(SIP/zug,30)
+
+exten => 2359,1,Dial(SIP/jir,30)
+exten => 2359,n,VoiceMail(2359@default,u)
+exten => 2359#,1,Dial(SIP/zug,30)
+
+
+
 exten => 2329,1,Dial(SIP/rpn_home,30)
 exten => 2329,n,VoiceMail(2330@default,u)
 exten => 2329#,1,Dial(SIP/rpn_home,30)
@@ -386,9 +419,6 @@ exten => 2332#,1,Dial(SIP/lazurit,60)
 
 exten => 2334,1,Dial(SIP/idk,60)
 exten => 2334#,1,Dial(SIP/idk,60)
-
-exten => 2335,1,Dial(SIP/idk_m,60)
-exten => 2335#,1,Dial(SIP/idk_m,60)
 
 exten => 2336,1,Dial(SIP/2336,30)
 exten => 2336#,1,Dial(SIP/2336,30)
