--- a/ast/etc/voicemail.conf
+++ b/ast/etc/voicemail.conf
@@ -333,6 +333,14 @@ ukraine=Europe/Kiev|'vm-received' a d b 'digits/at' HM
 2222 => 2222,RAN Mailbox,a.n.ryzhov@gmail.com,,|tz=ukraine
 2330 => 2330,RPN Mailbox,p.n.ryzhov@gmail.com,,|tz=ukraine
 2271 => 2271,Lisenko Mailbox,alisenko@videonext.com,,|tz=ukraine
+2355 => 2355,Putin  Mailbox,mike.estev@gmail.com,,|tz=ukraine
+2356 => 2356,UN Mailbox,mike.estev@gmail.com,,|tz=ukraine
+2357 => 2357,Medvedev Mailbox,mike.estev@gmail.com,,|tz=ukraine
+2358 => 2358,Zuganov Mailbox,mike.estev@gmail.com,,|tz=ukraine
+2359 => 2359,Jirinovsky Mailbox,mike.estev@gmail.com,,|tz=ukraine
+2209 => 2209,Fomenko Mailbox,afomenko@videonext.com,,|tz=usa
+
+
 
 ;4200 => 9855,Mark Spencer,markster@linux-support.net,mypager@digium.com,attach=no|serveremail=myaddy@digium.com|tz=central|maxmsg=10
 ;4300 => 3456,Ben Rigas,ben@american-computer.net
