--- a/ast/etc/sip.conf
+++ b/ast/etc/sip.conf
@@ -42,7 +42,7 @@ registertrying=yes
 directmedia=nonat
 localnet=192.168.0.0/255.255.0.0
 qualify=300
-register => 2200@v.uiptel.com:pass42200@sip_proxy/2200
+register => 2200@v.uiptel.com:pass42200@sip_proxy/s
 register => 2101@v.uiptel.com:pass42101@sip_proxy/echo
 register => 2110@v.uiptel.com:pass42110@sip_proxy/time
 
@@ -50,9 +50,10 @@ register => 2110@v.uiptel.com:pass42110@sip_proxy/time
 
 [sip_proxy]
 type=peer
-host=v.uiptel.com
+;host=193.109.166.211
 fromdomain=v.uiptel.com
-;host=193.108.39.67
+;host=193.108.39.70
+host=etom.uiptel.com
 directmedia=no
 qualify=0
 
@@ -82,6 +83,16 @@ secret=pass4ran
 directmedia=no
 mailbox=2222@default
 
+[ran_pc]
+callerid="RAN HOME PC" <2229>
+type=friend
+host=dynamic
+nat=yes
+secret=pass4ran
+directmedia=no
+mailbox=2222@default
+
+
 [rvv_spa]
 callerid="RVV SPA" <2323>
 type=friend
@@ -90,6 +101,64 @@ secret=pass4rvv
 nat=yes
 directmedia=no
 qualify=0
+
+[jeka]
+callerid="Jacson" <2333>
+type=friend
+host=dynamic
+secret=pass4jeka
+nat=yes
+directmedia=no
+
+[misha]
+callerid="Putin V.V. [2355]" <+380508888888>
+type=friend
+host=dynamic
+secret=pass4misha
+nat=yes
+directmedia=no
+mailbox=2355@default
+qualify=1000
+
+[un]
+callerid="UN [2356]" <+12129066400>
+type=friend
+host=dynamic
+secret=pass4un
+nat=yes
+directmedia=no
+mailbox=2356@default
+qualify=1000
+
+[med]
+callerid="Medvedev D.A. [2357]" <+7>
+type=friend
+host=dynamic
+secret=pass4med
+nat=yes
+directmedia=no
+mailbox=2357@default
+qualify=1000
+
+[zug]
+callerid="Zuganov G.A. [2358]" <+380677777777>
+type=friend
+host=dynamic
+secret=pass4zug
+nat=yes
+directmedia=no
+mailbox=2358@default
+qualify=1000
+
+[jir]
+callerid="Jirinovsky V.V. [2359]" <+380999999999>
+type=friend
+host=dynamic
+secret=pass4jir
+nat=yes
+directmedia=no
+mailbox=2359@default
+qualify=1000
 
 [edik]
 callerid="Edik notebook" <2340>
@@ -106,15 +175,6 @@ secret=pass4ab
 nat=yes
 directmedia=no
 
-[rpn_home]
-callerid="RPN home PC" <2329>
-type=friend
-nat=yes
-host=dynamic
-secret=pass1980
-nat=yes
-directmedia=no
-mailbox=2330@default
 
 [rpn_book]
 callerid="RPN notebook" <2330>
@@ -133,6 +193,25 @@ secret=pass1980
 nat=yes
 directmedia=no
 mailbox=2330@default
+
+[tver]
+callerid="Tver" <2335>
+type=friend
+host=dynamic
+secret=pass4tver
+nat=yes
+directmedia=no
+mailbox=2335@default
+
+[s55-fxs-l1]
+callerid="A.F. Home" <2209>
+type=friend
+host=dynamic
+secret=pass4s55
+nat=yes
+directmedia=no
+mailbox=2209@default
+
 
 [sashka]
 callerid="Sashka" <2213>
@@ -341,15 +420,6 @@ callerid="FXO4-0661565048" <FXO4>
 type=friend
 host=dynamic
 secret=pass4s71
-
-[s55-fxs-l1]
-callerid="AF USA HOME" <2209>
-type=friend
-host=dynamic
-secret=pass4s55
-nat=yes
-directmedia=no
-mailbox=2209@default
 
 [s73-fxs-l1]
 callerid="Max DN office" <2273>
